--- a/express_server/package.json
+++ b/express_server/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
     "dev": "tsc -w & nodemon dist/server.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --no-cache",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
