--- a/express_server/Dockerfile
+++ b/express_server/Dockerfile
@@ -10,7 +10,7 @@ RUN ln -s /usr/local/bin/node /usr/bin/node
 # Create app directory
 WORKDIR /usr/src/app
 
-# Copy package files
+# Copy package files for express server
 COPY express_server/package*.json ./
 
 # Install dependencies
@@ -22,6 +22,19 @@ WORKDIR /usr/src/GongRzhe_Calendar-MCP-Server
 COPY GongRzhe_Calendar-MCP-Server/package*.json ./
 RUN npm install
 RUN npm run build
+
+# Copy Gmail MCP Server
+COPY Gmail-MCP-Server /usr/src/Gmail-MCP-Server
+WORKDIR /usr/src/Gmail-MCP-Server
+COPY Gmail-MCP-Server/package*.json ./
+RUN npm install
+RUN npm run build
+
+# Set up credentials and OAuth files
+RUN mkdir -p /gmail-server
+COPY credentials.json /gmail-server/credentials.json
+COPY gcp-oauth.keys.json /gcp-oauth.keys.json
+RUN ls -la /gmail-server/ && ls -la /  # Debug step
 
 # Go back to express server directory
 WORKDIR /usr/src/app
@@ -35,5 +48,5 @@ RUN npm run build
 # Expose port
 EXPOSE 3000
 
-# Start the server
+# Start the server (environment variables set in Compose)
 CMD ["npm", "start"]
